# intl-messageformat-parser-rs

./: .prettierrc  Cargo.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
benches/: benchmark.rs
intl-messageformat-parser-rs/: Cargo.toml
intl-messageformat-parser-rs-napi/: .gitignore  Cargo.toml  package.json  tsconfig.build.json
intl-messageformat-parser-rs-napi/benchmark/: bench.ts
intl-messageformat-parser-rs-napi/npm/darwin/: README.md  package.json
intl-messageformat-parser-rs-napi/npm/linux/: README.md  package.json
intl-messageformat-parser-rs-napi/npm/linux-musl/: README.md  package.json
intl-messageformat-parser-rs-napi/npm/win32/: README.md  package.json
intl-messageformat-parser-rs-napi/src/: index.ts  lib.rs
intl-messageformat-parser-rs/benches/: benchmark.rs
intl-messageformat-parser-rs/src/: lib.rs
intl-messageformat-parser-wasm/: Cargo.toml  LICENSE  package.json  tsconfig.json
intl-messageformat-parser-wasm/benchmark/: bench.mjs
intl-messageformat-parser-wasm/src/: lib.rs
src/: ast.rs  js_intl.rs  lib.rs  parser.rs  pattern_syntax.rs
