[package]
name = "intl-messageformat-parser-rs-napi"
version = "0.1.0"
authors = ["Linjie Ding <pyrocat101@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intl-messageformat-parser-rs = { path = "../intl-messageformat-parser-rs" }
napi = { version = "0.5", features = ["serde-json"] }
napi-derive = "0.5"
jemallocator = "0.3.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "0.2"
